# envrcctl

./: .gitignore  README.jp.md  README.md  pyproject.toml
.zed/: tasks.json
.zed/scripts/: verify  verify-release
Formula/: envrcctl.rb
docs/: coverage_100_assessment.md  draft.md  impl_plan.md  impl_tickets.json  release_checklist.md
scripts/: build_macos_auth_helper.sh  generate_completions.py  package_for_ship.sh  release_artifacts.py
scripts/release/: package_for_ship.py
src/envrcctl/: audit.py  auth.py  cli.py  envrc.py  keychain.py  managed_block.py
src/envrctl/: cli.py  command_runner.py  envrc.py  keychain.py  managed_block.py  secrets.py  secretservice.py
tests/: __init__.py  conftest.py  test_audit.py  test_audit_cli.py  test_cli.py  test_cli_doctor.py  test_cli_errors.py  test_cli_eval.py  test_cli_exec.py  test_cli_helpers.py  test_cli_inject.py  test_cli_migrate.py  test_cli_secret_get.py  test_cli_secret_list.py  test_cli_secret_set_unset.py  test_command_runner.py  test_envrc.py  test_keychain.py  test_main.py  test_managed_block.py  test_secrets.py  test_secretservice.py  test_smoke.py
tests/helpers/: cli_support.py
